--- a/index.html
+++ b/index.html
@@ -2,9 +2,70 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Odin Landing Page</title>
 </head>
 <body>
-
+<header class="header">
+    <img src="" alt="Header logo">
+    <nav class="header__menu">
+        <ul>
+            <li><a href="#">header link one</a></li>
+            <li><a href="#">header link two</a></li>
+            <li><a href="#">header link three</a></li>
+        </ul>
+    </nav>
+</header>
+<section class="hero-section">
+    <div class="hero-section__menu-wrapper">
+        <h1>This website is awesome</h1>
+        <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower
+            contrast</p>
+        <button>Sign up</button>
+    </div>
+    <img src="" alt="Hero image">
+</section>
+<section class="image-set-section">
+    <h2>Some random information.</h2>
+    <div class="image-set">
+        <div class="image-set__item">
+            <img src="" alt="" class="image-set__image">
+            <p class="image-set__description">this is some subtext under an illustration or image</p>
+        </div>
+        <div class="image-set__item">
+            <img src="" alt="" class="image-set__image">
+            <p class="image-set__description">this is some subtext under an illustration or image</p>
+        </div>
+        <div class="image-set__item">
+            <img src="" alt="" class="image-set__image">
+            <p class="image-set__description">this is some subtext under an illustration or image</p>
+        </div>
+        <div class="image-set__item">
+            <img src="" alt="" class="image-set__image">
+            <p class="image-set__description">this is some subtext under an illustration or image</p>
+        </div>
+    </div>
+</section>
+<section class="quote-section">
+    <figure>
+        <blockquote cite="#">
+            <p>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe
+                people will actually read it. Who knows? All I know
+                is that it looks nice.</p>
+        </blockquote>
+        <figcaption>—-Thor, God of Thunder, <cite>work name</cite></figcaption>
+    </figure>
+</section>
+<section class="sign-up-section">
+    <div class="sign-up-description">
+        <h3>Call to action! It's time!</h3>
+        <p>Sign up for our product by clicking that button right over there!</p>
+    </div>
+    <form action="" method="post" class="sign-up-form">
+        <button type="submit" class="sign-up-form__button">Sign up</button>
+    </form>
+</section>
+<footer>
+    <small>Copyright @ The Odin Project 2021</small>
+</footer>
 </body>
 </html>
