Add header styling

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
         <div class="header__logo">Header Logo</div>
         <nav class="header__menu">
             <ul class="header__list">
-                <li><a href="#">header link one</a></li>
-                <li><a href="#">header link two</a></li>
-                <li><a href="#">header link three</a></li>
+                <li><a href="#" class="header__link">header link one</a></li>
+                <li><a href="#" class="header__link">header link two</a></li>
+                <li><a href="#" class="header__link">header link three</a></li>
             </ul>
         </nav>
     </header>
@@ -26,25 +26,25 @@
                 contrast</p>
             <button class="button">Sign up</button>
         </div>
-        <img src="" alt="Hero image">
+        <img src="./images/hero-image.jpg" alt="Hero image">
     </section>
     <section class="image-set-section">
         <h2>Some random information.</h2>
         <div class="image-set">
             <div class="image-set__item">
-                <img src="" alt="" class="image-set__image">
+                <img src="./images/item-1.webp" alt="Random image" class="image-set__image">
                 <p class="image-set__description">this is some subtext under an illustration or image</p>
             </div>
             <div class="image-set__item">
-                <img src="" alt="" class="image-set__image">
+                <img src="./images/item-2.jpg" alt="Random image" class="image-set__image">
                 <p class="image-set__description">this is some subtext under an illustration or image</p>
             </div>
             <div class="image-set__item">
-                <img src="" alt="" class="image-set__image">
+                <img src="./images/item-3.webp" alt="Random image" class="image-set__image">
                 <p class="image-set__description">this is some subtext under an illustration or image</p>
             </div>
             <div class="image-set__item">
-                <img src="" alt="" class="image-set__image">
+                <img src="./images/item-4.jpg" alt="Random image" class="image-set__image">
                 <p class="image-set__description">this is some subtext under an illustration or image</p>
             </div>
         </div>
