Add hero section styles

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 contrast</p>
             <button class="button">Sign up</button>
         </div>
-        <img src="./images/hero-image.jpg" alt="Hero image">
+        <img src="./images/hero-image.jpg" alt="Hero image" class="hero-section__image">
     </section>
     <section class="image-set-section">
         <h2>Some random information.</h2>
