Fix for proper width and background color

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
-<div class="wrapper">
+<div class="page-width-wrap">
     <header class="header">
         <div class="header__logo">Header Logo</div>
         <nav class="header__menu">
@@ -18,16 +18,21 @@
             </ul>
         </nav>
     </header>
+</div>
+<div class="page-width-wrap">
     <section class="hero-section">
         <div class="hero-section__menu-wrapper">
             <h1>This website is awesome</h1>
-            <p class="hero-section__description">This website has some subtext that goes here under the main title. It's
+            <p class="hero-section__description">This website has some subtext that goes here under the main title.
+                It's
                 a smaller font and the color is lower
                 contrast</p>
             <button class="button">Sign up</button>
         </div>
         <img src="./images/hero-image.jpg" alt="Hero image" class="hero-section__image">
     </section>
+</div>
+<div class="page-width-wrap page-width-wrap--white">
     <section class="image-set-section">
         <h2>Some random information.</h2>
         <div class="image-set">
@@ -49,10 +54,13 @@
             </div>
         </div>
     </section>
+</div>
+<div class="page-width-wrap">
     <section class="quote-section">
         <figure>
             <blockquote cite="#">
-                <p>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or
+                <p>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space,
+                    or
                     maybe
                     people will actually read it. Who knows? All I know
                     is that it looks nice.</p>
@@ -60,6 +68,8 @@
             <figcaption>—-Thor, God of Thunder, <cite>work name</cite></figcaption>
         </figure>
     </section>
+</div>
+<div class="page-width-wrap">
     <section class="sign-up-section">
         <div class="sign-up-description">
             <h3>Call to action! It's time!</h3>
@@ -69,7 +79,9 @@
             <button type="submit" class="button sign-up-form__button">Sign up</button>
         </form>
     </section>
-    <footer>
+</div>
+<div class="page-width-wrap">
+    <footer class="footer">
         <small>Copyright @ The Odin Project 2021</small>
     </footer>
 </div>
