Add styles for image set section

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 </div>
 <div class="page-width-wrap page-width-wrap--white">
     <section class="image-set-section">
-        <h2>Some random information.</h2>
+        <h2 class="image-set-section__header">Some random information.</h2>
         <div class="image-set">
             <div class="image-set__item">
                 <img src="./images/item-1.webp" alt="Random image" class="image-set__image">
