--- a/index.html
+++ b/index.html
@@ -55,17 +55,17 @@
         </div>
     </section>
 </div>
-<div class="page-width-wrap">
+<div class="page-width-wrap page-width-wrap--quote">
     <section class="quote-section">
-        <figure>
-            <blockquote cite="#">
+        <figure class="quote">
+            <blockquote cite="#" class="quote__block">
                 <p>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space,
                     or
                     maybe
                     people will actually read it. Who knows? All I know
                     is that it looks nice.</p>
             </blockquote>
-            <figcaption>—-Thor, God of Thunder, <cite>work name</cite></figcaption>
+            <figcaption class="quote__caption">-Thor, God of Thunder</figcaption>
         </figure>
     </section>
 </div>
