--- a/index.html
+++ b/index.html
@@ -69,15 +69,17 @@
         </figure>
     </section>
 </div>
-<div class="page-width-wrap">
+<div class="page-width-wrap page-width-wrap--white">
     <section class="sign-up-section">
-        <div class="sign-up-description">
-            <h3>Call to action! It's time!</h3>
-            <p>Sign up for our product by clicking that button right over there!</p>
+        <div class="call-to-action">
+            <div class="call-to-action__description">
+                <h3>Call to action! It's time!</h3>
+                <p>Sign up for our product by clicking that button right over there!</p>
+            </div>
+            <form action="" method="post" class="call-to-action__form">
+                <button type="submit" class="button button--alt">Sign up</button>
+            </form>
         </div>
-        <form action="" method="post" class="sign-up-form">
-            <button type="submit" class="button sign-up-form__button">Sign up</button>
-        </form>
     </section>
 </div>
 <div class="page-width-wrap">
