--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 contrast</p>
             <button class="button">Sign up</button>
         </div>
-        <img src="./images/hero-image.jpg" alt="Hero image" class="hero-section__image">
+        <img src="./images/hero-image.webp" srcset="./images/hero-image@0.5x.webp, ./images/hero-image.webp 2x" alt="Hero image" loading="lazy" class="hero-section__image">
     </section>
 </div>
 <div class="page-width-wrap page-width-wrap--white">
@@ -37,19 +37,19 @@
         <h2 class="image-set-section__header">Some random information.</h2>
         <div class="image-set">
             <div class="image-set__item">
-                <img src="./images/item-1.webp" alt="Random image" class="image-set__image">
+                <img src="./images/item-1.webp" srcset="./images/item-1@0.5x.webp, ./images/item-1.webp 2x" loading="lazy" alt="Random image" class="image-set__image">
                 <p class="image-set__description">this is some subtext under an illustration or image</p>
             </div>
             <div class="image-set__item">
-                <img src="./images/item-2.jpg" alt="Random image" class="image-set__image">
+                <img src="./images/item-2.webp" srcset="./images/item-2@0.5x.webp, ./images/item-2.webp 2x" loading="lazy" alt="Random image" class="image-set__image">
                 <p class="image-set__description">this is some subtext under an illustration or image</p>
             </div>
             <div class="image-set__item">
-                <img src="./images/item-3.webp" alt="Random image" class="image-set__image">
+                <img src="./images/item-3.webp" srcset="./images/item-3@0.5x.webp, ./images/item-3.webp 2x" loading="lazy" alt="Random image" class="image-set__image">
                 <p class="image-set__description">this is some subtext under an illustration or image</p>
             </div>
             <div class="image-set__item">
-                <img src="./images/item-4.jpg" alt="Random image" class="image-set__image">
+                <img src="./images/item-4.webp" srcset="./images/item-4@0.5x.webp, ./images/item-4.webp 2x" loading="lazy" alt="Random image" class="image-set__image">
                 <p class="image-set__description">this is some subtext under an illustration or image</p>
             </div>
         </div>
